<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/navigation_boxcontent">

    <fragment
            android:id="@+id/navigation_boxcontent"
            android:name="de.wbh.storageboxmanager.ui.FragmentBoxContent"
            android:label="@string/title_box_content"
            tools:layout="@layout/fragment_boxcontent"/>

    <fragment
            android:id="@+id/navigation_tags"
            android:name="de.wbh.storageboxmanager.ui.FragmentTags"
            android:label="@string/title_tags"
            tools:layout="@layout/fragment_tags"/>

    <fragment
            android:id="@+id/navigation_settings"
            android:name="de.wbh.storageboxmanager.ui.FragmentSettings"
            android:label="@string/title_settings"
            tools:layout="@layout/fragment_settings"/>

</navigation>